# AdventOfCode2016

./: .gitignore  AdventOfCode2016.cabal  README.md
app/: Main.hs
input/day8/: test.txt
input/day9/: test.txt
src/: AdventUtils.hs  Lib.hs
src/Day1/: Part1.hs  Part2.hs  Utils.hs
src/Day10/: Part1.hs
src/Day1Day2/: Common.hs
src/Day1Day2/Day1/: Part1.hs  Part2.hs  Utils.hs
src/Day1Day2/Day2/: Part1.hs  Part2.hs  Utils.hs
src/Day3/: Part1.hs  Part2.hs  Utils.hs
src/Day4/: Part1.hs  Part2.hs  Utils.hs
src/Day5/: Part1.hs  Part2.hs  Utils.hs
src/Day6/: Part1.hs  Part2.hs  Utils.hs
src/Day7/: Part1.hs  Part2.hs  Utils.hs
src/Day8/: Lens.hs  Parser.hs  Part1.hs  Solution.hs  Types.hs  Utils.hs
src/Day9/: Part1.hs  Part2.hs
