name:                AdventOfCode2016
version:             0.1.0.0
synopsis:            AdventOfCode2016
description:         Please see README.md
homepage:            https://github.com/caneroj1/AdventOfCode2016#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Canero
maintainer:          jmc41493@gmail.com
copyright:           Copyright: (c) 2016 Joe Canero
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , AdventUtils
                     , Day1Day2.Common
                     , Day1Day2.Day1.Part1
                     , Day1Day2.Day1.Part2
                     , Day1Day2.Day1.Utils
                     , Day1Day2.Day2.Part1
                     , Day1Day2.Day2.Part2
                     , Day1Day2.Day2.Utils
                     , Day3.Part1
                     , Day3.Part2
                     , Day3.Utils
                     , Day4.Part1
                     , Day4.Part2
                     , Day4.Utils
                     , Day5.Part1
                     , Day5.Part2
                     , Day5.Utils
                     , Day6.Part1
                     , Day6.Part2
                     , Day6.Utils
                     , Day7.Part1
                     , Day7.Part2
                     , Day7.Utils
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , cryptohash
                     , hashable
                     , hex
                     , mtl
                     , parsec
                     , resourcet
                     , split
                     , text
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

executable AdventOfCode2016-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , AdventOfCode2016
  default-language:    Haskell2010

test-suite AdventOfCode2016-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AdventOfCode2016
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/caneroj1/AdventOfCode2016
